<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@android:color/transparent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_28sdp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"/>

            <TextView
                android:id="@+id/proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_logo"
                android:text="@string/proceed_with_your"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/proceed"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_100sdp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email_address_or_phone_number"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailLay"
                android:layout_centerHorizontal="true"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_18sdp"
                    android:paddingEnd="@dimen/_18sdp"
                    android:textSize="@dimen/_12sdp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/log_in_btn"
                android:layout_width="@dimen/_115sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_below="@+id/passwordLay"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_22sdp"
                android:background="@drawable/round_red_btn"
                android:elevation="@dimen/_1sdp"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/log_in_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textSize="@dimen/_10sdp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45sdp"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_18sdp"
            android:paddingBottom="@dimen/_8sdp">

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/create_an_account_or_sign_up"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>